Work on https://abutcher.lighthouseapp.com/projects/32755/tickets/104-ui-error-messages ticket. Resolved ticket https://abutcher.lighthouseapp.com/projects/32755/tickets/108-ui-alignment-in-contact-screen

--- a/public/stylesheets/sass/frontend.sass
+++ b/public/stylesheets/sass/frontend.sass
@@ -27,12 +27,11 @@
 
 /*
   General
-
 body
   :font-size 62.5%
   :text-align center
   :background #ddd
-
+  :height 100%
 /* Colours
   
   link-colour   = #2b3087
@@ -1090,6 +1089,8 @@ span.field_with_errors
       .avatar
         :float left
         :margin-right 2em
+      p
+        :margin-left 135px
   
 p.subs
   :float right
@@ -1743,3 +1744,12 @@ ul.error_messages
     
 .second-column
   :margin-left 9.5em 
+  
+.errorExplanation
+  h4
+    :color red
+  ul
+    :padding-left 1em
+    :margin-bottom 2em
+    li
+      color: #CD251B
